--- a/android/Download/res/layout/activity_main.xml
+++ b/android/Download/res/layout/activity_main.xml
@@ -4,12 +4,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <Button 
+
+    <Button
+        android:id="@+id/downloadButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Click To Download File"
-        android:id="@+id/downloadButton"
-    />
+        android:text="@string/main_activity_download_btn" />
      
     <TextView 
         android:layout_width="fill_parent"
