Revert "Remove warning message"
This reverts commit 87a4f0556a275a020f35f66adf025c97296b5924.

--- a/android/Download/res/layout/activity_main.xml
+++ b/android/Download/res/layout/activity_main.xml
@@ -4,12 +4,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-
-    <Button
-        android:id="@+id/downloadButton"
+    <Button 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/main_activity_download_btn" />
+        android:text="Click To Download File"
+        android:id="@+id/downloadButton"
+    />
      
     <TextView 
         android:layout_width="fill_parent"
