--- a/android/Download/res/layout/activity_detail.xml
+++ b/android/Download/res/layout/activity_detail.xml
@@ -7,7 +7,6 @@
         android:id="@+id/ImageView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_centerInParent="true"
-        android:contentDescription="@string/detail_activity_image_description" />
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
